--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,5 +12,12 @@
     flex-direction: row;
     padding: 12px;
   }
+
+  .Welcome{
+    display: flex;
+    font-size: larger;
+    font-weight: 800;
+    text-decoration-color: white;
+  }
   
 }
